Log creation separation

--- a/Ipynb/Econformance.ipynb
+++ b/Ipynb/Econformance.ipynb
@@ -100,7 +100,7 @@
     "    # ccdcr\n",
     "    # ccdecl\n",
     "\n",
-    "    header = [\"logA\", \"logB\", \"ccheu\", \"ccind\", \"ccdcr\", \"ccfreq\", \"ccdur\", \"cctime\"]\n",
+    "    header = [\"logA\", \"logB\", \"CCHeu\", \"CCInd\", \"CCDcr\", \"CCFreq\", \"CCDur\", \"CCTime\"]\n",
     "    values = [path_logA, path_logB, ccheu, ccind, ccdcr, ccfreq, ccdur, cctime]\n",
     "    print(\"Writing the results...\")\n",
     "    # open the file in the write mode\n",
