--- a/Ipynb/Mining.ipynb
+++ b/Ipynb/Mining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "from pm4py.visualization.petri_net import visualizer as pn_visualizer\n",
     "import pm4py\n",
     "import uuid\n",
-    "import os"
+    "import os\n"
    ]
   },
   {
@@ -23,26 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def discovery_inductive(log):\n",
+    "def discovery_inductive(log, uuidstr):\n",
     "    ind = pm4py.discover_petri_net_inductive(log)\n",
     "    gviz = pn_visualizer.apply(ind[0], ind[1], ind[2])\n",
     "    PATH = 'Models'\n",
     "    if not os.path.exists(PATH):\n",
     "        os.makedirs(PATH)\n",
-    "    pn_visualizer.save(gviz, \"Models/ind_\"+str(uuid.uuid4())+\".png\")\n",
-    "    return ind\n",
-    "def discovery_heuristic(log):\n",
+    "    filename = \"Models/ind_\"+uuidstr\n",
+    "    pn_visualizer.save(gviz, filename+\".png\")\n",
+    "    pm4py.write_pnml(ind[0], ind[1], ind[2], filename+\".pnml\")\n",
+    "    return ind, filename\n",
+    "def discovery_heuristic(log, uuidstr):\n",
     "    PATH = 'Models'\n",
     "    if not os.path.exists(PATH):\n",
     "        os.makedirs(PATH)\n",
     "    heu = pm4py.discover_petri_net_heuristics(log)\n",
     "    gviz = pn_visualizer.apply(heu[0], heu[1], heu[2])\n",
-    "    pn_visualizer.save(gviz, \"Models/heu_\"+str(uuid.uuid4())+\".png\")\n",
-    "    return heu\n"
+    "    filename = \"Models/heu_\"+uuidstr\n",
+    "    pn_visualizer.save(gviz, filename+\".png\")\n",
+    "    pm4py.write_pnml(heu[0], heu[1], heu[2], filename + \".pnml\")\n",
+    "    return heu, filename\n"
    ]
   },
   {
@@ -58,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conformance (logA, logB, alg):\n",
+    "def conformance_old (logA, logB, alg):\n",
     "    if(alg == \"Inductive\"):\n",
     "        pn = discovery_inductive(logA)\n",
     "    elif(alg == \"Heuristic\"):\n",
@@ -72,17 +76,70 @@
     "        x =  x + trace[\"fitness\"]\n",
     "    x = int(x)\n",
     "\n",
-    "    aligned_traces_dataframe = alignments.get_diagnostics_dataframe(logA, aligned_traces)\n",
+    "    aligned_traces_dataframe = alignments.get_diagnostics_dataframe(logB, aligned_traces)\n",
+    "    return aligned_traces_dataframe, x/len(logB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "parsing log, completed traces :: 100%|██████████| 1000/1000 [00:01<00:00, 563.89it/s]\n",
+      "parsing log, completed traces :: 100%|██████████| 1000/1000 [00:00<00:00, 1847.06it/s]\n",
+      "aligning log, completed variants :: 100%|██████████| 4/4 [00:00<00:00, 144.47it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    case_id  cost  fitness  is_fit\n",
+      "0         0     1      1.0    True\n",
+      "1         1     1      1.0    True\n",
+      "2        10     1      1.0    True\n",
+      "3       100     1      1.0    True\n",
+      "4       101     1      1.0    True\n",
+      "..      ...   ...      ...     ...\n",
+      "995     995     1      1.0    True\n",
+      "996     996     1      1.0    True\n",
+      "997     997     1      1.0    True\n",
+      "998     998     1      1.0    True\n",
+      "999     999     1      1.0    True\n",
+      "\n",
+      "[1000 rows x 4 columns] 1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def conformance (model, logB):\n",
+    "    net, initial_marking, final_marking = pm4py.read_pnml(model+\".pnml\")\n",
+    "\n",
+    "    aligned_traces = alignments.apply_log(logB, net, initial_marking, final_marking)\n",
+    "    x = 0\n",
+    "    for trace in aligned_traces:\n",
+    "        x =  x + trace[\"fitness\"]\n",
+    "    x = int(x)\n",
+    "\n",
+    "    aligned_traces_dataframe = alignments.get_diagnostics_dataframe(logB, aligned_traces)\n",
     "    return aligned_traces_dataframe, x/len(logB)"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "1b5acb681577528e2aff85da35659397b1a3d39ac070b6fb3442068ab6131df9"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -96,7 +153,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+   }
   }
  },
  "nbformat": 4,
