--- a/Ipynb/Statsdata.ipynb
+++ b/Ipynb/Statsdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,10 @@
     "from pm4py.objects.log.importer.xes import importer as xes_importer\n",
     "from scipy.stats import norm\n",
     "from pm4py.statistics.attributes.log import get as attributes_get\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +103,8 @@
     "    --------------\n",
     "    map\n",
     "        \"Sum\" : fsum, \"Mean\": fmean, \"Median\": fmedian, \"StDev\": fstdev, \"Min\": fmin, \"Max\": fmax\n",
+    "    list\n",
+    "        Attrbute values\n",
     "    \"\"\"\n",
     "    fr = freq_attributes(log)\n",
     "    fmean = {}\n",
@@ -127,7 +132,8 @@
     "        fstdev[key] = stats.stdev(value)\n",
     "\n",
     "    # print(f\"Sum: {fsum}, \\n Mean {fmean}, \\n Median {fmedian}, \\n StDev {fstdev}, \\n Min {fmin}, \\n Max {fmax}\")\n",
-    "    return({\"Sum\" : fsum, \"Mean\": fmean, \"Median\": fmedian, \"StDev\": fstdev, \"Min\": fmin, \"Max\": fmax})\n",
+    "    attr_list = pm4py.statistics.attributes.log.get.get_attribute_values(log, attribute_key=\"concept:name\")\n",
+    "    return({\"Sum\" : fsum, \"Mean\": fmean, \"Median\": fmedian, \"StDev\": fstdev, \"Min\": fmin, \"Max\": fmax}, dict.fromkeys(attr_list, 0))\n",
     "    # return(fsum, fmean, fmedian, fstdev, fmin, fmax)"
    ]
   },
@@ -140,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,11 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_activity_duration_stats(log, minutes: bool = False):\n",
+    "    if(not \"time:timestamp\" in pm4py.stats.get_event_attributes(log)):\n",
+    "        #raise ValueError('No timestamp attribute defined...')\n",
+    "        return\n",
     "    dmean = soj_time_get.apply(log, parameters={soj_time_get.Parameters.TIMESTAMP_KEY: \"time:timestamp\", soj_time_get.Parameters.START_TIMESTAMP_KEY: \"start_timestamp\", soj_time_get.Parameters.AGGREGATION_MEASURE: 'mean'})\n",
     "    dmedian = soj_time_get.apply(log, parameters={soj_time_get.Parameters.TIMESTAMP_KEY: \"time:timestamp\", soj_time_get.Parameters.START_TIMESTAMP_KEY: \"start_timestamp\", soj_time_get.Parameters.AGGREGATION_MEASURE: 'median'})\n",
     "    dmin = soj_time_get.apply(log, parameters={soj_time_get.Parameters.TIMESTAMP_KEY: \"time:timestamp\", soj_time_get.Parameters.START_TIMESTAMP_KEY: \"start_timestamp\", soj_time_get.Parameters.AGGREGATION_MEASURE: 'min'})\n",
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +327,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Activity position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the index position, and the respective frequency, of each activity in the log\n",
+    "def get_freq_position_normalized_old(log):\n",
+    "    attr_list = pm4py.stats.get_event_attribute_values(log, \"concept:name\")\n",
+    "    res = {}\n",
+    "    for a in attr_list:\n",
+    "        res[a] = pm4py.stats.get_activity_position_summary(log, activity=a)\n",
+    "\n",
+    "    for activity, values in res.items():\n",
+    "        maxres = max(values.values())\n",
+    "        minres = 0\n",
+    "        if(maxres == minres and maxres != 0 and minres != 0):\n",
+    "            for pos, value in values.items():\n",
+    "                res[activity][pos] = 1.0\n",
+    "        else:\n",
+    "            for pos, value in values.items():\n",
+    "                res[activity][pos] = (value - minres)/(maxres - minres)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the index position, and the respective frequency, of each activity in the log\n",
+    "def get_freq_position_normalized(log):\n",
+    "    attr_list = pm4py.stats.get_event_attribute_values(log, \"concept:name\")\n",
+    "    attr_keys = {key: Counter() for key in attr_list}\n",
+    "    properties = pm4py.utils.get_properties(log)\n",
+    "    activity_key = properties[\n",
+    "        pm4py.utils.constants.PARAMETER_CONSTANT_ACTIVITY_KEY] if pm4py.utils.constants.PARAMETER_CONSTANT_ACTIVITY_KEY in properties else pm4py.utils.xes_constants.DEFAULT_NAME_KEY\n",
+    "\n",
+    "    for trace in log:\n",
+    "        for i in range(len(trace)):\n",
+    "            lt = len(trace)\n",
+    "            this_act = trace[i][activity_key]\n",
+    "            # Let's compute the percentage position of this event in the trace\n",
+    "            percev = (100*i)/lt\n",
+    "            if(percev >= 0 and percev <= 24):\n",
+    "                attr_keys[this_act][1]+=1\n",
+    "            elif(percev >= 25 and percev <= 49):\n",
+    "                attr_keys[this_act][2]+=1\n",
+    "            elif(percev >= 50 and percev <= 74):\n",
+    "                attr_keys[this_act][3]+=1\n",
+    "            elif(percev >= 75 and percev <= 100):\n",
+    "                attr_keys[this_act][4]+=1\n",
+    "\n",
+    "    # And then we normalize it\n",
+    "    for act, counts in attr_keys.items():\n",
+    "        maxx = max(counts.values())\n",
+    "        minn = 0\n",
+    "        for k, v in counts.items():\n",
+    "            if(maxx == minn):\n",
+    "                normv = 1\n",
+    "            else:\n",
+    "                normv = (v-minn)/(maxx-minn)\n",
+    "            attr_keys[act][k] = normv\n",
+    "\n",
+    "    return attr_keys"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trace length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_trace_length_stats(log):\n",
+    "    temp = []\n",
+    "    #pm4py.objects.log.util.index_attribute.insert_trace_index_as_event_attribute(log)\n",
+    "    for trace in log:\n",
+    "        temp.append(len(trace))\n",
+    "    return({\"Mean\": stats.mean(temp), \"Median\": stats.median(temp), \"StDev\": stats.stdev(temp), \"Min\": min(temp), \"Max\": max(temp)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## STATISTICAL CONFORMANCE"
    ]
   },
@@ -330,20 +435,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fitness of frequencies based on the normal distribution of freq\n",
-    "def get_freq_fitness(logNormal, logComp):\n",
-    "    u = get_activity_freq_stats(logNormal)\n",
-    "    attr_list = pm4py.statistics.attributes.log.get.get_attribute_values(logNormal, attribute_key=\"concept:name\")\n",
-    "    attr_list_freq = dict.fromkeys(attr_list, 0)\n",
-    "    temp = attr_list_freq\n",
+    "def get_freq_fitness(u, logBase, logComp):\n",
     "    result = {}\n",
     "    i = 0\n",
+    "    attr_list = pm4py.statistics.attributes.log.get.get_attribute_values(logBase, attribute_key=\"concept:name\")\n",
+    "\n",
     "    for trace in logComp:\n",
-    "        temp = dict.fromkeys(temp, 0)\n",
+    "        temp = dict.fromkeys(attr_list, 0)\n",
     "        i = i+1\n",
     "        fitness = []\n",
     "        for event in trace:\n",
@@ -381,12 +484,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "#########################################\n",
     "# The assumption is that if stdev < 1, meaning that the difference is lower than 1 seconds, we round it to zero\n",
@@ -394,12 +496,12 @@
     "\n",
     "# Fitness of duration based on the normal distribution of the normal log\n",
     "# and comparing the probability of the new log of being in the distribution function\n",
-    "def get_duration_fitness(logNormal, logComp):\n",
+    "def get_duration_fitness(u, logBase, logComp):\n",
     "    # this is my ground truth\n",
-    "    u = get_activity_duration_stats(logNormal)\n",
-    "    attr_list = pm4py.statistics.attributes.log.get.get_attribute_values(logNormal, attribute_key=\"concept:name\")\n",
     "    d = {}\n",
     "    result = {}\n",
+    "    attr_list = pm4py.statistics.attributes.log.get.get_attribute_values(logBase, attribute_key=\"concept:name\")\n",
+    "\n",
     "    for act in attr_list.keys():\n",
     "        d[act] = []\n",
     "    for trace in logComp:\n",
@@ -434,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,13 +705,16 @@
     "    log\n",
     "        Event log\n",
     "    \"\"\"\n",
-    "    # temp = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]\n",
+    "    if(not \"time:timestamp\" in pm4py.stats.get_event_attributes(log)):\n",
+    "        #raise ValueError('No timestamp attribute defined...')\n",
+    "        return\n",
+    "    # temp = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]\n",
     "    # res = {key: 0 for key in temp}\n",
     "    attr_list = pm4py.statistics.attributes.log.get.get_attribute_values(log, attribute_key=\"concept:name\")\n",
     "\n",
     "    res = {}\n",
     "    for a in attr_list:\n",
-    "        res[a] = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0, 5: 0, 6: 0, 7: 0, 8: 0, 9: 0, 10: 0, 11: 0, 12: 0, 13: 0, 14: 0, 15: 0, 16: 0, 17: 0, 18: 0, 19: 0, 20: 0, 21: 0, 22: 0, 23: 0, 24: 0}\n",
+    "        res[a] = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0, 5: 0, 6: 0, 7: 0, 8: 0, 9: 0, 10: 0, 11: 0, 12: 0, 13: 0, 14: 0, 15: 0, 16: 0, 17: 0, 18: 0, 19: 0, 20: 0, 21: 0, 22: 0, 23: 0}\n",
     "\n",
     "    for trace in log:\n",
     "        for event in trace:\n",
@@ -643,7 +748,7 @@
     "            if(value == 0 and nlog2[activity][index] == 0):\n",
     "                pass\n",
     "            elif value == 0: arr.append(0.0)\n",
-    "            elif nlog2[activity][index] > value:  arr.append(1)\n",
+    "            elif nlog2[activity][index] >= value:  arr.append(1)\n",
     "            else:\n",
     "                arr.append(nlog2[activity][index]/value)\n",
     "\n",
@@ -652,14 +757,128 @@
     "        # inters[activity] = return_intersection(hist_1, hist_2)\n",
     "    return(arr, sum(arr)/len(arr))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Position fitness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the frequency in the given position of each activity in the log\n",
+    "def get_position_fitness_old(nlog, log2):\n",
+    "    logtest = get_freq_position_normalized(log2)\n",
+    "    arr = []\n",
+    "    inters = {}\n",
+    "\n",
+    "    for activity, normalized in nlog.items():\n",
+    "        if(not activity in logtest.keys()):\n",
+    "            arr.append(0)\n",
+    "        else:\n",
+    "            for index, value in normalized.items():\n",
+    "                if(not index in logtest[activity].keys()):\n",
+    "                    arr.append(0)\n",
+    "                elif logtest[activity][index] > value:  arr.append(1)\n",
+    "                else:\n",
+    "                    arr.append(logtest[activity][index]/value)\n",
+    "        for key in logtest[activity].keys():\n",
+    "            if not key in normalized:\n",
+    "                arr.append(0)\n",
+    "    return(arr, sum(arr)/len(arr))\n",
+    "    \n",
+    "def get_position_fitness(basecase, testlog):\n",
+    "    attr_keys = {key: Counter() for key in basecase}\n",
+    "    attr_keys2 = {key: Counter() for key in basecase}\n",
+    "    result = {}\n",
+    "    for trace in testlog:\n",
+    "        fitnesst = []\n",
+    "        for i in range(len(trace)):\n",
+    "            this_act = trace[i][\"concept:name\"]\n",
+    "            lt = len(trace)\n",
+    "            # Here we already know that is zero, because the event does not appear at all in the base case\n",
+    "            if(this_act in basecase.keys()):\n",
+    "                # Let's compute the percentage position of this event in the trace\n",
+    "                percev = (100*i)/lt\n",
+    "                if(percev >= 0 and percev <= 24):\n",
+    "                    attr_keys[this_act][1]+=1\n",
+    "                elif(percev >= 25 and percev <= 49):\n",
+    "                    attr_keys[this_act][2]+=1\n",
+    "                elif(percev >= 50 and percev <= 74):\n",
+    "                    attr_keys[this_act][3]+=1\n",
+    "                elif(percev >= 75 and percev <= 100):\n",
+    "                    attr_keys[this_act][4]+=1\n",
+    "                # And then we normalize it (we normalize because we grouped in chunks)\n",
+    "                for pos, counts in attr_keys[this_act].items():\n",
+    "                    maxx = max(attr_keys[this_act].values())\n",
+    "                    minn = 0\n",
+    "                    if(maxx == minn):\n",
+    "                        normv = 1\n",
+    "                    else:\n",
+    "                        normv = (counts-minn)/(maxx-minn)\n",
+    "                    attr_keys2[this_act][pos] = normv\n",
+    "        for act, count in attr_keys2.items():\n",
+    "            for p, freq in count.items():\n",
+    "                if(not act in basecase.keys()):\n",
+    "                    fitnesst.append(0)\n",
+    "                elif(not str(p) in basecase[act].keys()):\n",
+    "                    fitnesst.append(0)\n",
+    "                elif(basecase[act][str(p)] == freq):\n",
+    "                    fitnesst.append(freq)\n",
+    "                elif(basecase[act][str(p)] > freq):\n",
+    "                    # print(\"Base case higher\")\n",
+    "                    fitnesst.append(1) \n",
+    "                    # fitnesst.append(freq/basecase[act][p])\n",
+    "                elif(basecase[act][str(p)] < freq):\n",
+    "                    # print(\"Base case lower\")  \n",
+    "                    fitnesst.append(1) \n",
+    "                    # fitnesst.append(basecase[act][p]/freq)  \n",
+    "                elif(not str(p) in basecase[act].values()):\n",
+    "                    fitnesst.append(0) \n",
+    "        result[trace.attributes.get(\"concept:name\")] = sum(fitnesst)/len(fitnesst)\n",
+    "    return result, np.mean(list(result.values()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare trace length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_length_fitness(statsl, logTest):\n",
+    "    res = {}\n",
+    "    for trace in logTest:\n",
+    "        value = len(trace)\n",
+    "        #  worst case in which the value is < nMin or > nMax\n",
+    "        if value < statsl.get(\"Min\") or value > statsl.get(\"Max\"):\n",
+    "            fitness = 0\n",
+    "        # optimum case where the stdev = 0 and avg = value, meaning that there is a perfect fit\n",
+    "        elif(statsl.get(\"StDev\") == 0 and value == statsl.get(\"Mean\")): \n",
+    "            fitness = 1\n",
+    "        else:\n",
+    "            f = norm.pdf(value, loc = statsl.get(\"Mean\") , scale = statsl.get(\"StDev\"))\n",
+    "            g = norm.pdf(statsl.get(\"Mean\"), loc = statsl.get(\"Mean\") , scale = statsl.get(\"StDev\"))\n",
+    "            fitness = round(f/g,5)\n",
+    "        res[trace.attributes.get(\"concept:name\")] = fitness\n",
+    "    return(res, np.mean(list(res.values())))"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "1b5acb681577528e2aff85da35659397b1a3d39ac070b6fb3442068ab6131df9"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -673,9 +892,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
